topping and image components

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,5 +3,8 @@ $toppings: (
     "glazed": #fde68a,
     "sugar": #ddd6fe,
     "chocolate": #78350f,
-    "maple": #fbbf24  
+    "maple": #fbbf24,
+    "blueberry":  rgb(30, 64, 175),
+    "powdered": rgb(251, 207, 232),
+    "devil": rgb(219, 39, 119)
 )
